--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </div>
         </div>
         <p>
-          <sup>*</sup> Equal contribution, <sup>&dagger</sup> Equal advising
+          <sup>*</sup> Equal contribution, <sup>&dagger;</sup> Equal advising
         </p>
         <!-- ===== RESOURCE ICONS ===== -->
         <div class="publication-links">
@@ -147,15 +147,15 @@
   </section>
 
   <!-- ===== OVERVIEW ===== -->
-  <!-- <section id="overview" class="section">
+  <section id="overview" class="section">
     <div class="container is-max-desktop content-container has-text-centered">
-      <video class="overview-image" autoplay loop muted playsinline poster="static/thumbnails/overview.jpg">
-        <source src="static/videos/overview.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-      <p style="margin-top:1rem;">We introduce <strong>Factored&nbsp;Scaling&nbsp;Curves&nbsp;(FSC)</strong>, which model how policy performance scales with data for different environmental factors and can be extrapolated to guide principled data collection.</p>
+      <img src="static/overview.png" alt="Overview Figure" class="overview-image" />
+      <p style="margin-top:1rem;">
+        Our goal is to evaluate a policy by computing bounds on its mean real-world performance on a diverse environment distribution \(\mathcal{D}_{\text{env}}\). We present a framework that augments real-world evaluations with simulation evaluations to provide stronger inferences on real-world policy performance that could otherwise only be obtained by scaling up real-world evaluations.
+      </p>
     </div>
-  </section>  -->
+  </section>
+
   <!--
   <section id="overview" class="section">
     <div class="container is-max-desktop content-container has-text-centered">
@@ -184,7 +184,37 @@
     </div>
   </section>
 
- 
+  <!-- ===== Problem ===== -->
+  <section id="real-robot" class="section">
+    <div class="container is-max-desktop content-container">
+      <h2 class="title is-3 has-text-centered">Problem Formulation</h2>
+      <p class="has-text-justified">
+        We consider the mean estimation problem in policy evaluation, where the goal is to estimate the policy’s average performance according to a bounded evaluation metric \(M\) over the environment distribution \(\Denv\). Formally, we define mean policy performance \(\mu^*\) as:
+        \begin{equation}
+            \mu^* = \mathbb{E}_{X \sim \Denv} [Y(X)],
+        \end{equation}
+        where \(Y(X)=M(X,\pi)\) is the outcome of evaluating policy \(\pi\) in environment \(X\) under metric \(M\). For sampled environments \(X_1, \ldots, X_{n} \iidsim \Denv\), the outcomes of real-world policy evaluation according to metric \(M\) are denoted as \(Y_1,\ldots,Y_n\), respectively. We seek a confidence interval \(CI\) such that: 
+      \begin{equation}
+      \label{eq:guarantee}
+      \Prob_{S_n \sim \mathcal{D}^{n}_{\text{env}}} (\mu^* \in CI) \geq 1 - \alpha,
+      \end{equation}
+      where the probability measure is defined over the draw of the empirical evaluation sample \(S_n = \{(X_1, Y_1), \ldots , (X_n, Y_n)\}\).
+      </p>
+      <br>
+    </div> 
+  </section>
+
+  <!-- ===== Approach ===== -->
+  <section id="real-robot" class="section">
+    <div class="container is-max-desktop content-container">
+      <h2 class="title is-3 has-text-centered">Approach: Simulation to Augment Real Tests via Prediction Powered Inference</h2>
+      <p class="has-text-justified">
+        Using our framework, we evaluate diffusion policy and a multi-task fine-tuned \(\pi_0\) on a joint distribution of tasks and initial conditions.
+      </p>
+      <br>
+    </div> 
+  </section>
+
   <!-- ===== REAL2Sim EXPERIMENTS ===== -->
   <section id="real-robot" class="section">
     <div class="container is-max-desktop content-container">
