--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
           </div>
         </div>
         <p>
-          <sup>*</sup> Equal contribution, <sup>&dagger;</sup> Equal advising
+          <sup>*</sup> Equal contribution, <sup>&dagger;</sup> Equal contribution
         </p>
         <!-- ===== RESOURCE ICONS ===== -->
         <div class="publication-links">
-          <a href="static/paper.pdf" class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener">
+          <!-- <a href="static/paper.pdf" class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener">
             <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span>
-          </a>
+          </a> -->
           <!--
           <a href="https://arxiv.org/abs/2505.07728" class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener">
             <span class="icon"><i class="ai ai-arxiv"></i></span><span>arXiv</span>
@@ -209,7 +209,7 @@
     <div class="container is-max-desktop content-container">
       <h2 class="title is-3 has-text-centered">Approach: Simulation to Augment Real Tests via Prediction Powered Inference</h2>
       <p class="has-text-justified">
-        Using our framework, we evaluate diffusion policy and a multi-task fine-tuned \(\pi_0\) on a joint distribution of tasks and initial conditions.
+        
       </p>
       <br>
     </div> 
@@ -234,7 +234,13 @@
       </p> -->
       <br>
   </section>
-
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">Acknowledgments</h2>
+        <p>The authors would like to thank Tijana Zrnic, Allen Z. Ren, Anastasios Angelopoulos, and Rachel Luo for insightful discussions. The authors were partially supported by the NSF CAREER Award \(\#2044149\), the Office of Naval Research (N00014-23-1-2148), and the Sloan Fellowship. A. Badithela is supported by the Presidential Postdoctoral Fellowship at Princeton University.
+        </p>
+    </div>
+  </section>
   <!--
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
