--- a/index.html
+++ b/index.html
@@ -241,13 +241,10 @@
         </p>
     </div>
   </section>
-  <div class="row justify-content-md-center">
-      <div class="col-md-12 col-lg-10">
-          <br><br>
-          <h2>
-              Citation 
-          </h2>
-          <div class="form-group col-md-12">
+  <section class="section" id="BibTeX">
+      <div class="container is-max-desktop content">
+          <h2 class="title">Citation</h2>
+          <!-- <div class="form-group col-md-12"> -->
               <textarea id="bibtex" class="form-control" rows="7" readonly>
     @inproceedings{step2025,
         title = {Is {Your} {Imitation} {Learning} {Policy} {Better} than {Mine}? {Policy} {Comparison} with {Near}-{Optimal} {Stopping}},
@@ -255,9 +252,8 @@
         booktitle={arXiv preprint arXiv:2503.10966}
         year = {2025},
 }   </textarea>
-                </div>
-            </div>
-        </div>
+      </div>
+  </section>
   <!--
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
