Add sections to index.html

--- a/index.html
+++ b/index.html
@@ -234,6 +234,26 @@
       </p> -->
       <br>
   </section>
+
+  <!-- ===== Synthetic Data EXPERIMENTS ===== -->
+  <section id="synthetic" class="section">
+    <div class="container is-max-desktop content-container">
+      <h2 class="title is-3 has-text-centered">Synthetic Data Experiments</h2>
+      <!-- <p>We evaluate our method on three simulation tasks: Put Tomato in Plate, Peg Insertion and Pull Cube Tool.
+      </p> -->
+      <br>
+  </section>
+
+  <!-- ===== Key Takeaways ===== -->
+  <section id="synthetic" class="section">
+    <div class="container is-max-desktop content-container">
+      <h2 class="title is-3 has-text-centered">Key Takeaways</h2>
+      <!-- <p>We evaluate our method on three simulation tasks: Put Tomato in Plate, Peg Insertion and Pull Cube Tool.
+      </p> -->
+      <br>
+  </section>
+
+  <!-- ===== Acknowledgments ===== -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">Acknowledgments</h2>
@@ -241,10 +261,9 @@
         </p>
     </div>
   </section>
-  <section class="section" id="BibTeX">
+  <!-- <section class="section" id="BibTeX">
       <div class="container is-max-desktop content">
           <h2 class="title">Citation</h2>
-          <!-- <div class="form-group col-md-12"> -->
               <textarea id="bibtex" class="form-control" rows="7" readonly>
     @inproceedings{step2025,
         title = {Is {Your} {Imitation} {Learning} {Policy} {Better} than {Mine}? {Policy} {Comparison} with {Near}-{Optimal} {Stopping}},
@@ -253,7 +272,7 @@
         year = {2025},
 }   </textarea>
       </div>
-  </section>
+  </section> -->
   <!--
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
