--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   </section>
 
   <!-- ===== Problem ===== -->
-  <section id="real-robot" class="section">
+  <!-- <section id="real-robot" class="section">
     <div class="container is-max-desktop content-container">
       <h2 class="title is-3 has-text-centered">Problem Formulation</h2>
       <p class="has-text-justified">
@@ -202,12 +202,12 @@
       </p>
       <br>
     </div> 
-  </section>
+  </section> -->
 
   <!-- ===== Approach ===== -->
   <section id="real-robot" class="section">
     <div class="container is-max-desktop content-container">
-      <h2 class="title is-3 has-text-centered">Approach: Simulation to Augment Real Tests via Prediction Powered Inference</h2>
+      <h2 class="title is-3 has-text-centered">Approach: Augmenting Real Tests with Simulation via Prediction Powered Inference</h2>
       <p class="has-text-justified">
         
       </p>
@@ -227,33 +227,15 @@
   </section>
 
   <!-- ===== SIm2SIm EXPERIMENTS ===== -->
-  <section id="sim-robot" class="section">
+  <!-- 
+    <section id="sim-robot" class="section">
     <div class="container is-max-desktop content-container">
       <h2 class="title is-3 has-text-centered">Sim2Sim Experiments</h2>
-      <!-- <p>We evaluate our method on three simulation tasks: Put Tomato in Plate, Peg Insertion and Pull Cube Tool.
-      </p> -->
-      <br>
-  </section>
-
-  <!-- ===== Synthetic Data EXPERIMENTS ===== -->
-  <section id="synthetic" class="section">
-    <div class="container is-max-desktop content-container">
-      <h2 class="title is-3 has-text-centered">Synthetic Data Experiments</h2>
-      <!-- <p>We evaluate our method on three simulation tasks: Put Tomato in Plate, Peg Insertion and Pull Cube Tool.
-      </p> -->
-      <br>
-  </section>
-
-  <!-- ===== Key Takeaways ===== -->
-  <section id="synthetic" class="section">
-    <div class="container is-max-desktop content-container">
-      <h2 class="title is-3 has-text-centered">Key Takeaways</h2>
-      <!-- <p>We evaluate our method on three simulation tasks: Put Tomato in Plate, Peg Insertion and Pull Cube Tool.
-      </p> -->
-      <br>
-  </section>
-
-  <!-- ===== Acknowledgments ===== -->
+      <p>We evaluate our method on three simulation tasks: Put Tomato in Plate, Peg Insertion and Pull Cube Tool.
+      </p> 
+      </div>
+    </section> 
+  -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">Acknowledgments</h2>
