--- a/index.html
+++ b/index.html
@@ -216,11 +216,9 @@
         <h3>Paired evaluations</h3>
           <p>We set up a real2sim pipeline to collect a small number of paired evaluations in both real and simulation environments. 
             This paired dataset allows us to quantify the bias in simulation evaluations and <em>rectify</em> predictions from large-scale simulations.
-            Importantly, the rectifier is related to the correlation between the paired real and simulation evaluations. In a sense, it quantifies the real-simulation gap and provides a lower bound on the advantage (e.g., minimizing confidence interval width, saving hardware evaluations) we can expect from scaling simulation. 
-            If the rectifier variance is smaller than the variance in real evaluations, we can expect to save on real-world evaluations.
-          </p>
+            Importantly, the rectifier is related to the correlation between the paired real and simulation evaluations. In a sense, it quantifies the real-simulation gap and provides a lower bound on the advantage (e.g., minimizing confidence interval width, saving hardware evaluations) we can expect from scaling simulation. If the rectifier variance is smaller than the variance in real evaluations, we can expect to save on real-world evaluations.</p>
         <h3>Additional simulation evaluations</h3>
-          <p>Relative to the size of the paired data, we collect a large number of additional simulations. </p>
+          <p>Relative to the size of the paired dataset, we collect a large number of additional simulations. By running large-scale simulation tests </p>
       </p>
       <br>
     </div> 
