--- a/index.html
+++ b/index.html
@@ -214,17 +214,23 @@
       <br>
     </div> 
     <div class="container is-max-desktop content-container has-text-centered">
-      <!-- <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/overview.png">
+      <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/overview.png">
         <source src="static/videos/experiment_setup.mp4" type="video/mp4" />
         Your browser does not support the video tag.
-      </video> -->
-      <figure style="text-align: center; margin: 20px 0;">
+      </video>
+      <!-- <figure style="text-align: center; margin: 20px 0;">
         <img src="static/thumbnails/experiment_overview.png" alt="Sample photo" width="400" style="border: 2px solid #ccc; border-radius: 8px;">
         <figcaption style="font-size: 0.9em; color: #555; margin-top: 8px;">
           Evaluation Setup
         </figcaption>
-      </figure>
+      </figure> -->
     </div>
+    <h3 class="title is-4 has-text-centered mt-6">SureSim requires fewer hardware evaluations</h3>
+        <p class="mb-5">Compared to obtaining confidence intervals with real-world only trials, SureSim leverages simulation effectively, requiring fewer hardware evaluations to achieve similar bounds.</p>
+          <br>
+    <h3 class="title is-4 has-text-centered mt-6">SureSim illustrates the advantage of scaling simulation evaluations</h3>
+        <p class="mb-5">Compared to obtaining confidence intervals with real-world only trials, SureSim leverages simulation effectively, requiring fewer hardware evaluations to achieve similar bounds.</p>
+          <br>
   </section>
 
   <section class="section" id="BibTeX">
