--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       </figure> -->
     </div>
     <h3 class="title is-4 has-text-centered mt-6">SureSim requires fewer hardware evaluations</h3>
-        <p class="mb-5">Compared to obtaining confidence intervals with real-world only trials, SureSim leverages simulation effectively, requiring fewer hardware evaluations to achieve similar bounds.</p>
+        <p class="has-text-justified mb-5">Compared to obtaining confidence intervals with real-world only trials, SureSim leverages simulation effectively, requiring fewer hardware evaluations to achieve similar bounds.</p>
           <br>
           <figure style="text-align: center; margin: 20px 0;">
             <img src="static/thumbnails/saving.png" alt="Sample photo" width="400" style="border: 2px solid #ccc; border-radius: 8px;">
@@ -239,10 +239,10 @@
             </figcaption>
           </figure>
     <h3 class="title is-4 has-text-centered mt-6">SureSim illustrates the advantage of scaling simulation evaluations</h3>
-        <p class="mb-5"> Instead of scaling up hardware evaluations, we can scale up simulation evaluations up to the limit of the real-simulation gap. </p>
+        <p class="has-text-justified mb-5"> Instead of scaling up hardware evaluations, we can scale up simulation evaluations up to the limit of the real-simulation gap. </p>
           <br>
           <figure style="text-align: center; margin: 20px 0;">
-            <img src="static/thumbnails/saving.png" alt="Sample photo" width="400" style="border: 2px solid #ccc; border-radius: 8px;">
+            <img src="static/thumbnails/diffusion_policy_savings.png" alt="Sample photo" width="400" style="border: 2px solid #ccc; border-radius: 8px;">
           </figure>
   </section>
 
