--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </p>
       <br>
     </div>
-    <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/overview.png">
+    <video class="overview-video" width="1000" autoplay loop muted playsinline poster="static/thumbnails/overview.png">
         <source src="static/videos/fast_policy_eval.mp4" type="video/mp4" />
         Your browser does not support the video tag.
     </video>
